Non Social HTML

--- a/NoFramework/helpAbout.html
+++ b/NoFramework/helpAbout.html
@@ -32,7 +32,7 @@
                   History
                 </a>
           
-                <a class="navbar-item">
+                <a class="navbar-item" href="./newExcersie.html">
                   New Excerise
                 </a>
           
@@ -123,6 +123,22 @@
             </div>
           </nav>
           <!-- NAVBAR END -->
+          <div class="block is-size-1">
+            About Us
+          </div>
+
+
+          <div class="columns">
+            <div class="column">
+              <div class="block is-size-3">
+                App Name
+              </div>
+              <div class="block is-size-5">
+                <strong>Created by:</strong> Cass kubisa
+                <br>
+                For Web Design at SUNY New Paltz
+              </div>
+            </div>
 
       </div>
       <script src="https://unpkg.com/vue@next"></script>
