--- a/NoFramework/index.html
+++ b/NoFramework/index.html
@@ -32,7 +32,7 @@
                   History
                 </a>
           
-                <a class="navbar-item">
+                <a class="navbar-item" href="./newExcersie.html">
                   New Excerise
                 </a>
           
@@ -128,7 +128,7 @@
           Excerise App
         </h1>
         <p class="subtitle">
-          Track your fitness
+          Your Progress This Week
         </p>
 
         <article class="message is-primary">
@@ -137,12 +137,11 @@
               <i class="fas fa-running"></i>
               Endurance
             </p>
-            <button class="delete" aria-label="delete"></button>
           </div>
           <div class="message-body">
             Progress This Week
             <br> 
-            <progress class="progress is-primary" value="15" max="100">15%</progress>
+            <progress class="progress is-primary" value="30" max="100">15%</progress>
             <button class="button is-light">More</button> 
           </div>
         </article>
@@ -153,12 +152,11 @@
               <i class="fas fa-dumbbell"></i>
               Strength
             </p>
-            <button class="delete" aria-label="delete"></button>
           </div>
           <div class="message-body">
             Progress This Week
             <br> 
-            <progress class="progress is-danger" value="15" max="100">15%</progress>
+            <progress class="progress is-danger" value="25" max="100">15%</progress>
             <button class="button is-light">More</button> 
           </div>
         </article>
@@ -173,7 +171,7 @@
           <div class="message-body">
             Progress This Week
             <br> 
-            <progress class="progress is-warning" value="15" max="100">15%</progress>
+            <progress class="progress is-warning" value="20" max="100">15%</progress>
             <button class="button is-light">More</button> 
           </div>
         </article>
@@ -188,7 +186,7 @@
           <div class="message-body">
             Progress This Week
             <br> 
-            <progress class="progress is-info" value="15" max="100">15%</progress>
+            <progress class="progress is-info" value="50" max="100">15%</progress>
             <button class="button is-light">More</button> 
           </div>
         </article>
